<resources>
    /*
    MainClass
    */
    <string name="app_name">Vogella Android</string>
    <string name="submit_button_text">Submit</string>
    <string name="data_button_text">Data</string>

    <string name="text_data1">Data Text 1</string>
    <string name="text_data2">Data Text 2</string>

    <string name="call_text_button">Call</string>
    <string name="txt_user_name_label">User Name</string>
    <string name="txt_the_name">Name Value</string>
    <string name="txt_practise">Practice</string>
    <string name="result_button_text">Result</string>
    <string name="user_label_value">User name</string>
    <string name="user_name_value">the name</string>
    <string name="button_learn_value">Practice</string>
    <string name="call_button_text">Call</string>
</resources>
